# saas-user-management

./: .gitignore  AGENTS.md  coverage_check.py  pyproject.toml
.codex/: config.toml
.github/workflows/: deploy_bus_processor.yaml  deploy_cognito_lambdas.yaml  deploy_post_confirmation_trigger.yaml  deploy_pre_sign_up_trigger.yaml  deploy_sign_up_api.yaml  python_checks_on_pr.yaml
envs/production/: apis.tf  bus_processor.tf  cognito.tf  cognito_cleanup.tf  cognito_lambdas.tf  event_sources.tf  frontend_client.tf  iam_policies.tf  input_parameters.tf  lambdas.tf  outputs.tf  terraform.tf
envs/production/apis/: sign_up.tf  variables.tf
src/: recaptcha.py  settings.py
src/adapters/: aws.py
src/cognito/: __init__.py  aws_commons.py  cleanup_list_unverified.py  cleanup_unverified_users.py  cleanup_unverified_users_test.py  pre_sign_up_trigger.py  pre_sign_up_trigger_test.py  types.py
src/controllers/: bus_processor.py  post_confirmation_trigger.py  pre_sign_up_trigger.py  sign_up_api.py
src/dto/: sign_up.py
src/facades/: __init__.py  handle_bus_event.py  handle_bus_event_test.py  process_pre_sign_up.py  process_pre_sign_up_test.py
src/services/user/: __init__.py  is_contact_in_use.py  is_contact_in_use_test.py  register_unverified_user.py  register_unverified_user_test.py  set_user_as_verified.py  set_user_as_verified_test.py
src/validators/: __init__.py  enforce_user_contact_uniqueness.py  enforce_user_contact_uniqueness_test.py  validate_recaptcha.py  validate_recaptcha_test.py  validate_user_username.py  validate_user_username_test.py
