[project]
name = "saas-user-management"
version = "0.1.0"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "boto3 (>=1.42.13,<2.0.0)",
    "aws-lambda-powertools (>=3.23.0,<4.0.0)",
    "boto3-stubs[lambda] (>=1.42.14,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "mypy (>=1.19.0,<2.0.0)",
    "coverage (>=7.13.0,<8.0.0)",
    "ruff (>=0.14.9,<0.15.0)",
    "types-requests (>=2.32.4.20250913,<3.0.0.0)"
]

[tool.coverage.run]
omit = [
    "*_test.py",
    ]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 80
indent-width = 4

target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]

[tool.mypy]
plugins = ['pydantic.mypy']